# brpc_benchmark

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  CMakeLists.txt  drawer.py  readme.md  result.txt  run_benchmark.sh  run_client.sh
cmake/: utils.cmake
deps2/: build_deps.sh
proto/: CMakeLists.txt  echo.proto
result/: brpc_parallel_attachment_100k.csv  brpc_parallel_attachment_10k.csv  brpc_parallel_attachment_10m.csv  brpc_parallel_attachment_1m.csv  brpc_parallel_proto_100k.csv  brpc_parallel_proto_10k.csv  brpc_parallel_proto_10m.csv  brpc_parallel_proto_1m.csv  brpc_parallel_streaming_100k.csv  brpc_parallel_streaming_10k.csv  brpc_parallel_streaming_10m.csv  brpc_parallel_streaming_1m.csv  brpc_req-size_attachment_1.csv  brpc_req-size_proto_1.csv  brpc_req-size_streaming_1.csv  iperf3_res.csv
result/0ms/: brpc_req-size_attachment_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_attachment_reqsz(256-256m)_para(2)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_attachment_reqsz(256-256m)_para(4)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_attachment_reqsz(256-256m)_para(6)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_attachment_reqsz(256-256m)_para(8)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std)_stream(128,32m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(2)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(2)_streamsz(8k)_prot(baidu_std)_stream(128,32m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(4)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(4)_streamsz(8k)_prot(baidu_std)_stream(128,32m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(6)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(8)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_proto_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_proto_reqsz(256-256m)_para(2)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_proto_reqsz(256-256m)_para(4)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_proto_reqsz(256-256m)_para(6)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_proto_reqsz(256-256m)_para(8)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_sstreaming_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_sstreaming_reqsz(256-256m)_para(2)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_sstreaming_reqsz(256-256m)_para(4)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_streaming-size_cstreaming_reqsz(256m)_para(1)_streamsz(256-8k)_prot(baidu_std)_stream(128,2m).csv  iperf3_res.csv
result/10ms/: brpc_req-size_attachment_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_attachment_reqsz(256-256m)_para(2)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_attachment_reqsz(256-256m)_para(4)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_attachment_reqsz(256-256m)_para(6)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_attachment_reqsz(256-256m)_para(8)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(2)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(4)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(6)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(8)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_proto_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_proto_reqsz(256-256m)_para(2)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_proto_reqsz(256-256m)_para(4)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_proto_reqsz(256-256m)_para(6)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_proto_reqsz(256-256m)_para(8)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_streaming-size_cstreaming_reqsz(256m)_para(1)_streamsz(256-8k)_prot(baidu_std)_stream(128,2m).csv  iperf3_res.csv
result/1ms/: brpc_req-size_attachment_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_attachment_reqsz(256-256m)_para(2)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_attachment_reqsz(256-256m)_para(4)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_attachment_reqsz(256-256m)_para(6)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_attachment_reqsz(256-256m)_para(8)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std)_stream(1,2m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std)_stream(1,32m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std)_stream(128,16m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std)_stream(128,32m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std)_stream(128,64m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std)_stream(128,8m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std)_stream(1k,2m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(1)_streamsz(8k)_prot(baidu_std)_stream(1k,32m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(2)_streamsz(8k)_prot(baidu_std)_stream(128,2m).csv  brpc_req-size_cstreaming_reqsz(256-256m)_para(2)_streamsz(8k)_prot(baidu_std)_stream(128,32m).csv  iperf3_res.csv  (+12 more)
script/: iperf3_test.sh  tc_script.sh
src/: CMakeLists.txt  benchmark_client.cc  benchmark_server.cc  brpc_client.h  brpc_client_sync.h  client.cc  config.h  continue_streaming.h  server.cc  stream_test.cc  util.h
